-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.9.0
-
macOS 10.12
So far, 2 out of 8 integration failures in https://codereview.qt-project.org/#/c/197769/ are caused by failing tst_QGuiEventLoop::testQuitLock():
Module "qt/qtbase" (eb6547b2808513c7b9822b18d8ccf2eb487b42d1) Failed test(s): /Users/qt/work/qt/qtbase/tests/auto/gui/kernel/qguieventloop: agent:2017/06/19 07:16:22 build.go:344: Executing instruction 407 of 940 agent:2017/06/19 07:16:22 build.go:270: [make check -j1] 900 1200 /Users/qt/work/qt/qtbase/tests/auto/gui/kernel/qguieventloop/target_wrapper.sh ./tst_qguieventloop -o /Users/qt/work/testresults/tests/auto/gui/kernel/qguieventloop235985366,xml -o -,txt ********* Start testing of tst_QGuiEventLoop ********* Config: Using QtTest library 5.9.1, Qt 5.9.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.0.0 (clang-800.0.42.1) (Apple)) PASS : tst_QGuiEventLoop::initTestCase() BPASS : tst_QGuiEventLoop::processEvents() QWARN : tst_QGuiEventLoop::exec() QEventLoop::exec: instance 0x7fff55b46ae8 has already called exec() PASS : tst_QGuiEventLoop::exec() PASS : tst_QGuiEventLoop::reexec() PASS : tst_QGuiEventLoop::execAfterExit() PASS : tst_QGuiEventLoop::wakeUp() PASS : tst_QGuiEventLoop::quit() PASS : tst_QGuiEventLoop::processEventsExcludeSocket() XFAIL : tst_QGuiEventLoop::processEventsExcludeTimers() X11ExcludeTimers only supported in the UNIX/Glib dispatchers Loc: [../../../corelib/kernel/qeventloop/tst_qeventloop.cpp(524)] PASS : tst_QGuiEventLoop::processEventsExcludeTimers() PASS : tst_QGuiEventLoop::deliverInDefinedOrder() PASS : tst_QGuiEventLoop::nestedLoops() FAIL! : tst_QGuiEventLoop::testQuitLock() 'timerSpy.count() > 3' returned FALSE. () Loc: [../../../corelib/kernel/qeventloop/tst_qeventloop.cpp(660)] PASS : tst_QGuiEventLoop::cleanupTestCase() Totals: 11 passed, 1 failed, 0 skipped, 1 blacklisted, 5532ms ********* Finished testing of tst_QGuiEventLoop ********* make: *** [check] Error 1 agent:2017/06/19 07:16:27 build.go:200: Process finished with error: exit status 2 agent:2017/06/19 07:16:27 build.go:152: Error reading from stdout/err: exit status 2 agent:2017/06/19 07:16:47 build.go:270: [make check -j1] 900 1200 /Users/qt/work/qt/qtbase/tests/auto/gui/kernel/qguieventloop/target_wrapper.sh ./tst_qguieventloop testQuitLock ********* Start testing of tst_QGuiEventLoop ********* Config: Using QtTest library 5.9.1, Qt 5.9.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.0.0 (clang-800.0.42.1) (Apple)) PASS : tst_QGuiEventLoop::initTestCase() QDEBUG : tst_QGuiEventLoop::testQuitLock() 18 PASS : tst_QGuiEventLoop::testQuitLock() PASS : tst_QGuiEventLoop::cleanupTestCase() Totals: 3 passed, 0 failed, 0 skipped, 0 blacklisted, 3289ms ********* Finished testing of tst_QGuiEventLoop ********* agent:2017/06/19 07:16:52 build.go:270: [make check -j1] 900 1200 /Users/qt/work/qt/qtbase/tests/auto/gui/kernel/qguieventloop/target_wrapper.sh ./tst_qguieventloop testQuitLock ********* Start testing of tst_QGuiEventLoop ********* Config: Using QtTest library 5.9.1, Qt 5.9.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.0.0 (clang-800.0.42.1) (Apple)) PASS : tst_QGuiEventLoop::initTestCase() QDEBUG : tst_QGuiEventLoop::testQuitLock() 16 FAIL! : tst_QGuiEventLoop::testQuitLock() 'timerSpy.count() > 17' returned FALSE. () Loc: [../../../corelib/kernel/qeventloop/tst_qeventloop.cpp(678)] PASS : tst_QGuiEventLoop::cleanupTestCase() Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 3142ms ********* Finished testing of tst_QGuiEventLoop ********* make: *** [check] Error 1 agent:2017/06/19 07:16:55 build.go:200: Process finished with error: exit status 2 agent:2017/06/19 07:16:55 build.go:152: Error reading from stdout/err: exit status 2 agent:2017/06/19 07:16:55 build.go:334: Found core file(s), uploading. agent:2017/06/19 07:16:55 storageclient.go:489: Creating artifacts archive and uploading it agent:2017/06/19 07:16:55 storageclient.go:511: Archive starts at directory /cores agent:2017/06/19 07:21:28 agent.go:167: Test failed agent:2017/06/19 07:21:28 agent.go:121: ERROR building: exit status 2 Build log: https://testresults.qt.io/logs/qt/qtbase/255052c7ed8a177799bb5fcb8580622a0e5a2050/MacOSMacOS_10_12x86_64MacOSMacOS_10_12x86_64Clangqtci-macos-10.12-x86_64-8-9339dbDebugAndRelease_Release/7ca30f915833d953146007e71743147e3e719500/test_1497843259/testlog.txt.gz Details: https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1497843235
- is required for
-
QTBUG-58968 Meta bug for Qt 5.9 on macOS 10.12
-
- Closed
-
- relates to
-
QTBUG-61131 tst_QGuiEventLoop::processEvents fails in macOS 10.12
-
- Closed
-
| For Gerrit Dashboard: QTBUG-61499 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 197791,2 | Blacklist flaky tst_QGuiEventLoop::testQuitLock() on macOS 10.12 | 5.9.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 202515,4 | QTestLib: Disable App Nap on macOS | dev | qt/qtbase | Status: MERGED | -1 | 0 |
| 202516,4 | Remove timer checks from testQuitLock | dev | qt/qtbase | Status: MERGED | +2 | 0 |